--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/Twig.git"]
 	path = vendor/Twig.git
 	url = https://github.com/fabpot/Twig.git
+[submodule "silex-doc-ja.git"]
+	path = silex-doc-ja.git
+	url = git@github.com:brtriver/silex-doc-ja.git
